# ext4plus

./: .deny.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
scripts/: all_conf.sh
src/: bitmap.rs  block_group.rs  dir.rs  dir_entry.rs  dir_entry_hash.rs  dir_htree.rs  error.rs  extent.rs  file.rs  inode.rs  iters.rs  journal.rs  lib.rs  mmp.rs  path.rs  reader.rs  resolve.rs  superblock.rs  sync.rs  test_util.rs  util.rs  uuid.rs  writer.rs  xattr.rs
src/file_blocks/: block_map.rs  extent_tree.rs  mod.rs
src/iters/: file_blocks.rs  mod.rs  read_dir.rs
src/journal/: block_map.rs  mod.rs  superblock.rs
tests/integration/: ext2.rs  ext3.rs  ext4.rs  label.rs  main.rs  path.rs  uuid.rs  write.rs  xattr.rs
xtask/: Cargo.toml
xtask/src/: bench.rs  big_fs.rs  diff_walk.rs  main.rs
xtask/uefibench/: Cargo.toml
xtask/uefibench/src/: main.rs
